fix: Auto-format code with gofmt
- fixed aligment in main.go and router.go
- updated swagger doc
